# MQF

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LayeredMQF.cpp  LayeredMQF.h  Makefile  README.md  Usefulcommands  bestParameters.sh  bufferedMQF.cpp  bufferedMQF.h  build.rs  compareLoadingFactor.cpp  cqf.4.5.res  cqf.s3.res  findPrimeNumbers.h  generateSpeedTable.py  gqf.c  gqf.cpp  gqf.h  insertionPerSecond.cpp  load_test_mqf  load_test_mqf.c  main.c  main.cpp  make  mqf.s3.res  mqf.s4.5.res  onDiskMQF.cpp  onDiskMQF.h  plotSpeed.py  runBencmark.sh  runDigiNorm.sh  runSizeTest.sh  runSpeedTest.sh  runTrim.sh  run_benchmark.sh  sizeTest.cpp  speedPerformance  (+7 more)
.github/workflows/: rust.yml
Benchmark_Utils_Script/: countingStructure.hpp  generateSeq.py  generator.cpp  generators.hpp
countmin/: countmin.c  countmin.h
countmin-khmer/: storage.hh
cqf/: Makefile  bestParameters.sh  gqf.c  gqf.h  insertionPerSecond.cpp  main.c
include/: bufferedMQF.h  gqf.h  onDiskMQF.h  utils.h
madoka/: Makefile  Makefile.in  config.h  config.status  configure  libtool  madoka.pc
madoka/lib/: Makefile  Makefile.in  approx.lo  file.lo  libmadoka.la  sketch.lo
madoka/lib/.deps/: approx.Plo  file.Plo  sketch.Plo
madoka/lib/.libs/: libmadoka.la  libmadoka.lai  libmadoka.so.0.0.0
madoka/src/: Makefile  Makefile.in  madoka  madoka-benchmark
madoka/src/.deps/: madoka-benchmark.Po  madoka.Po
madoka/src/.libs/: madoka  madoka-benchmark
madoka/test/: Makefile  Makefile.in
res/: loadingFactor.s20.kmers  loadingFactor.s25.kmers  loadingFactor.s27.kmers  loadingFactor.s27.u10.res  loadingFactor.s27.z2.res  loadingFactor.s27.z3.res  loadingFactor.s27.z5.res  size.kmers.n100M  size.kmers.n105M  size.kmers.n110M  size.kmers.n35M  size.kmers.n40M  size.kmers.n45M  size.kmers.n50M  size.kmers.n55M  size.kmers.n60M  size.kmers.n65M  size.kmers.n70M  size.kmers.n75M  size.kmers.n80M  size.kmers.n85M  size.kmers.n90M  size.kmers.n95M  size.z2.n100M  size.z2.n105M  size.z2.n110M  size.z2.n35M  size.z2.n40M  size.z2.n45M  size.z2.n50M  size.z2.n55M  size.z2.n60M  size.z2.n65M  size.z2.n70M  size.z2.n75M  size.z2.n80M  size.z2.n85M  size.z2.n90M  size.z2.n95M  size.z3.n100M  (+24 more)
src/: CMakeLists.txt  bufferedMQF.cpp  gqf.cpp  lib.rs  onDiskMQF.cpp  raw.rs  utils.cpp
tests/: CMakeLists.txt  CountingTests.cpp  HighLevelFunctionsTests.cpp  IOTests.cpp  LayeredCountingTests.cpp  bufferedCountingTests.cpp  indexTests.cpp  lowLevelTests.hpp  onDiskCountingTests.cpp  tagTests.cpp
