[package]
name = "mqf"
version = "1.0.1"
authors = ["Mostafa Shokrof <mostafa.shokrof@gmail.com>", "Tamer Mansour <drtamermansour@gmail.com>", "Luiz Irber <rust@luizirber.org>"]
description = "MQF, Mixed Quotient Filter, is a variant of CQF (Counting Quotient Filter)"
license-file = "LICENSE.txt"
repository = "https://github.com/dib-lab/MQF"
homepage = "https://github.com/dib-lab/MQF"
categories = ["science", "algorithms", "data-structures"]
edition = "2018"
readme = "README.md"
links = "libmqf"

[build-dependencies]
bindgen = "0.51"
cc = "1.0"

[dev-dependencies]
tempfile = "3.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
